k8s/movie_api/auth_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth-container
          image: rikhoff/movies_auth:latest
          command: [ "uvicorn" ]
          args: [ "--app-dir", "./src", "main:app", "--host", "0.0.0.0", "--port", "8080" ]
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: "/healthcheck"
              port: 8080
              httpHeaders:
                - name: "X-Request-Id"
                  value: "test-request"
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 2
            failureThreshold: 5 
          imagePullPolicy: IfNotPresent
---

apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: NodePort
  selector:
    app: auth
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
---
