k8s/movie_api/django_static.yaml

apiVersion: v1
kind: Service
metadata:
  name: staticfiles-service
spec:
  selector:
    app: staticfiles
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: staticfiles-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: staticfiles
  template:
    metadata:
      labels:
        app: staticfiles
    spec:
      volumes:
        - name: staticfiles
          persistentVolumeClaim:
            claimName: staticfiles-pvc
      containers:
        - name: nginx
          image: nginx:1.25
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: "/usr/share/nginx/html/static"
              name: staticfiles
---
