k8s/movie_api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-cache: "true"
    nginx.ingress.kubernetes.io/proxy-cache-valid: "200 1h, 404 10m"
    nginx.ingress.kubernetes.io/proxy-cache-use-stale: "error timeout updating http_500 http_502 http_503 http_504"
    nginx.ingress.kubernetes.io/proxy-cache-background-update: "on"
    nginx.ingress.kubernetes.io/proxy-cache-lock: "on"
    nginx.ingress.kubernetes.io/add-request-header: "X-Request-Id=$request_id"
spec:
  ingressClassName: nginx
  rules:
  - host: movie-api.local  # Здесь нужно указать ваш хост
    http:
      paths:
      - path: /static/
        pathType: Prefix
        backend:
          service:
            name: staticfiles-service
            port:
              number: 80
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: django-admin-service
            port:
              number: 8081
      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 8080
      - path: /api/files
        pathType: Prefix
        backend:
          service:
            name: file-api-service
            port:
              number: 8001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: movies-app-service  # Сервис, обрабатывающий основной трафик
            port:
              number: 8000
---
              
  # - host: minio.movie-api.local
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: minio
  #           port:
  #             number: 9000

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: minio.movie-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9001
          - path: /s3
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
